--- a/func_tests/buildspec_functest.yml
+++ b/func_tests/buildspec_functest.yml
@@ -18,7 +18,7 @@ phases:
       - aws cloudformation package --template ./func_tests/template.yml --s3-bucket hibirdi-experimental-s3-bucket --s3-prefix int_func_test --output-template ./func_tests/template-export.yml
       - aws cloudformation deploy --capabilities CAPABILITY_IAM --template-file ./func_tests/template-export.yml --stack-name hello-sam
 
-artifacts:
-  type: zip
-  files:
-    - template-export.yml
+#artifacts:
+#  type: zip
+#  files:
+#    - template-export.yml
