--- a/func_tests/buildspec_functest.yml
+++ b/func_tests/buildspec_functest.yml
@@ -4,22 +4,17 @@ phases:
   install:
     commands:
       # Upgrade AWS CLI to the latest version
+      # echo "In install stage"
       - pip install --upgrade awscli
 
   pre_build:
     commands:
-      # Discover and run unit tests in the 'tests' directory. For more information, see <https://docs.python.org/3/library/unittest.html#test-discovery>
-      # - python -m unittest discover tests
+      - echo "In pre-build stage"
 
   build:
     commands:
       # Use AWS SAM to package the application by using AWS CloudFormation
+      - echo "In build stage"
       - pwd
-      # - aws cloudformation delete-stack --stack-name hello-sam
       - aws cloudformation package --template ./func_tests/template.yml --s3-bucket hibirdi-experimental-s3-bucket --s3-prefix int_func_test --output-template ./func_tests/template-export.yml
       - aws cloudformation deploy --capabilities CAPABILITY_IAM --template-file ./func_tests/template-export.yml --no-fail-on-empty-changeset --stack-name hello-sam
-
-#artifacts:
-#  type: zip
-#  files:
-#    - template-export.yml
